# multimodal-causal-adversarial-network

./: .gitignore  .python-version  EEG_VisualTask.fdt  EEG_VisualTask.set  Makefile  README.md  pyproject.toml  requirements.txt  simulation.mat
docs/: mkdocs.yml
docs/docs/: index.md
models/: dcn_tf.py
multimodal_causal_adversarial_network/: __init__.py  config.py  dataset.py  features.py  plots.py
multimodal_causal_adversarial_network/dataset/: simulation_dataset.py
multimodal_causal_adversarial_network/modeling/: mcan_architecture.py  predict.py  train.py
multimodal_causal_adversarial_network/utils/: causal_graph.py  min_max_scaling.py  state_estimation.py
notebooks/jupyter/: 0.01-fmri-exploration.ipynb  0.02-fmri-exploration.ipynb  0.02-joint-data-visualizations.ipynb  0.03-joint-data-visualizations.ipynb  1.01-data-processing.ipynb  2.01-architecture-vizualization.ipynb  2.02-model-training.ipynb  3-hrf.ipynb  attention_visualization.py  causal_graph_visualization.py
notebooks/matlab/: 0.01-eeg-data-exploration.mlx  0.02-sim-fmri-exploration.mlx  2.01-eeg-power.mlx  3-spm.mlx  eeg-script.m  eeg_data_exploration.mlx
reports/figures/erp/face/frequency/: Chan16_trace.fig
src/: dataset.py
src/modeling/: mcan_architecture.py  train.py
